add read more arrow styles

--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
             <span class="card-badge">Interior</span>
             <span class="card-header">Top 5 Living Room Inspirations</span>
           </div>
-          <p class="card-text">
-            Curated vibrants colors for your living, make it pop & calm in the same time.
-          </p>
-          <button class="card-button">Read more</button>
-          <img class="read-more-arrow" src="img/arrow-right-line.png" alt="An arrow pointing in the read more button" />
+
+          <div class="card-bottom">
+            <p class="card-text">
+              Curated vibrants colors for your living, make it pop & calm in the same time.
+            </p>
+            <div class="card-action">
+              <button class="card-button">Read more</button>
+              <img class="read-more-arrow" src="img/arrow-right-line.png" alt="An arrow pointing in the read more button" />
+            </div>
+          </div>
         </div>
       </div>
     </main>
